mi primera confirmación de actualización

--- a/about.html
+++ b/about.html
@@ -26,6 +26,9 @@
             <img src="2.jpg" alt="Valor" />
             <img src="3.jpg" alt="Compromiso" /> 
         </div>
+        <div class=”greeting”>
+          <h1>¡Gracias por su visita!</h1>                                          
+        </div>
         <script src="script.js">            
         </script>    
     </body>
